Fix channel collapse icon faded on one side

--- a/src/components/primary/channels/_channels.scss
+++ b/src/components/primary/channels/_channels.scss
@@ -67,7 +67,7 @@
                 width: 7px;
                 height: 7px;
                 top: 9px;
-                left: 14px;
+                left: 18px;
                 border-right: 1px solid #FFF;
                 border-bottom: 1px solid #FFF;
                 transform: rotate(45deg);
@@ -85,7 +85,7 @@
             &.collapsed-4WdoJ7{
                 .icon-WnO6o2{
                     top: 11px;
-                    left: 12px;
+                    left: 18px;
                     transform: rotate(-45deg);
                 }
             }
@@ -175,7 +175,7 @@
                 color: #FFF;
             }
         }
-        
+
         // Connected to voice dot
         .modeConnected-2IEL4z{
             &::before{
